@@ -253,6 +253,7 @@ records-mismatch-record-clause:	error
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		unconformable
+record-sequential-advancing: error
 missing-statement:			error
 zero-length-literals:			ok
 xml-generate-extra-phrases:		unconformable
