@@ -264,6 +264,7 @@ records-mismatch-record-clause:	warning
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
+record-sequential-advancing: warning
 missing-statement:			warning
 zero-length-literals:			ok
 xml-generate-extra-phrases:		ok
