@@ -252,6 +252,7 @@ records-mismatch-record-clause:	ok	# IBM: "if not matching use the record size"
 record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		unconformable
+record-sequential-advancing: warning
 missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		ok
